# async-docker-rest-app

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
docker_rest_app/: __main__.py  app.py  server.py  settings.py
docker_rest_app/celery_app/: __init__.py  __main__.py  tasks.py
docker_rest_app/routers/: docker_router.py
docker_rest_app/tests/: locustfile.py  test_apps.py
