[tool.poetry]
name = "rest_docker_builder"
version = "0.1.0"
description = ""
authors = ["Abdul Mateen <abdul.mateen59@yahoo.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "3.10"
fastapi = ">=0.75.0"
fastapi-utils = ">=0.1.0"
loguru = ">=0.6.0"
uvicorn = ">=0.15.0"
celery = ">=5.2.6"
pydantic = ">=1.8.2"
redis = ">=3.3.10"
docker = ">=5.0.3"
pytest = "^7.1.2"
flower = "^1.0.0"
black = "^19.10b0"
sentry-sdk = "^3.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
allow_redefinition = false
check_untyped_defs = true
disallow_untyped_decorators = false
disallow_any_explicit = true
disallow_any_generics = true
disallow_untyped_calls = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
local_partial_types = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''